--- a/Login/res/values/strings.xml
+++ b/Login/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="app_name">Login</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_register">RegisterActivity</string>
-    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="action_edit">Edit</string>
+    <string name="title_activity_register">New Account</string>
+    <string name="title_activity_profile">Profile</string>
 
 </resources>
