--- a/Login/res/values/strings.xml
+++ b/Login/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_profile">Profile</string>
     <string name="title_activity_weather">Weather</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_change_password">Change Password</string>
 
 </resources>
